--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,8 +16,11 @@
     "bcrypt": "^5.1.1",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
+    "nextjs-toploader": "^1.6.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
