added rendering logic

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,15 +11,22 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.3.0",
+    "@monaco-editor/react": "^4.6.0",
     "@repo/ui": "*",
     "@types/bcrypt": "^5.0.2",
+    "@types/prismjs": "^1.26.4",
     "bcrypt": "^5.1.1",
+    "framer-motion": "^11.2.13",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^1.6.12",
+    "notion-client": "^6.16.0",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-notion-x": "^6.16.0",
+    "react-pdf": "^9.1.0",
     "recoil": "^0.7.7",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
