--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.3.0",
     "@monaco-editor/react": "^4.6.0",
-    "@repo/ui": "*",
+    "@repo/ui": "workspace:*",
     "@types/bcrypt": "^5.0.2",
     "@types/prismjs": "^1.26.4",
     "@types/react-syntax-highlighter": "^15.5.13",
     "bcrypt": "^5.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.13",
+    "jose": "^5.8.0",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
@@ -37,10 +38,10 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.2.3",
-    "@repo/db": "*",
-    "@repo/eslint-config": "*",
-    "@repo/tailwind-config": "*",
-    "@repo/typescript-config": "*",
+    "@repo/db": "workspace:*",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/tailwind-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
